# docker_simulation_pipeline_example

./: LICENCE  README.md  docker_sim_manager.py  example_monte_carlo_pi.py  example_random_art.py  pyproject.toml  test_monte_carlo_pi.py
.github/workflows/: docker-image.yml  publish-docker.yml  publish-gen-art-docker.yml  publish-monte-carlo-pi-docker.yml  publish-random-art-docker.yml  python-package.yml
docker/: docker_sim_manager.py  simulation.py
docker_sim/: docker_sim_manager.py  simulation_estimate_pi.py  simulation_random_art.py
example_monte_carlo_pi/: Dockerfile  README.md  monte_carlo_pi.py  pyproject.toml  test_monte_carlo_pi.py
example_random_art/: README.md  pyproject.toml  sprithering.py
generative_art/: Dockerfile  README.md  pyproject.toml  sprithering.py
simulation_monte_carlo_pi/: Dockerfile  README.md  monte_carlo_pi.py  pyproject.toml  test_monte_carlo_pi.py
