[tool.poetry]
name = "docker_monte_carlo_sim"
version = "0.1.0"
description = "A tutorial on how to scale simulations via docker containers"
authors = ["Michael Wittmann <michael.wittmann@tum.de>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.3.3"
halo = "^0.0.31"
loguru = "^0.5.3"
flake8 = "^3.8.4"
pytest = "^6.1.2"
docker = "^4.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
